Cd 3990 List Projects which user has scan access via org level permission (#293)
* CD-3990 fix scannable projects api

* refactor searchProjectsWithOrgLevelPermissions

* CD-3988 Restrict Project Analysis token to access search API only if project key is passed (#290)

* add param annotation to selectProjectsByOrgUuids

* add org for user and role db query

---------

Co-authored-by: lokeswarayadav-ar <110166241+lokeswarayadav-ar@users.noreply.github.com>
Co-authored-by: Lokeswara Yadav Manapaty <lokeswarayadav.manapaty@autorabit.com>